defer/stream example

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "examples/graphql-config",
     "examples/nextjs",
     "examples/subscriptions",
+    "examples/defer-stream",
     "website"
   ],
   "homepage": "https://github.com/dotansimha/graphql-yoga#readme",
@@ -69,6 +70,6 @@
   },
   "resolutions": {
     "@changesets/apply-release-plan": "5.0.1",
-    "graphql": "16.1.0"
+    "graphql": "16.0.0-experimental-stream-defer.5"
   }
 }
