--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "examples/nextjs",
     "examples/subscriptions",
     "examples/defer-stream",
+    "benchmark/*",
     "website"
   ],
   "homepage": "https://github.com/dotansimha/graphql-yoga#readme",
