--- a/packages/handler/package.json
+++ b/packages/handler/package.json
@@ -42,8 +42,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@ardatan/graphql-helix": "^0.0.11",
-    "cross-undici-fetch": "^0.1.4"
+    "@ardatan/graphql-helix": "0.1.12",
+    "cross-undici-fetch": "0.1.12"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
