--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,7 +45,7 @@
     "@envelop/core": "^1.6.2",
     "@envelop/disable-introspection": "^1.2.1",
     "@envelop/parser-cache": "^2.2.1",
-    "@envelop/validation-cache": "^2.2.1",
+    "@envelop/validation-cache": "2.3.0-alpha-cf6902c.0",
     "@graphql-tools/schema": "8.3.1",
     "@graphql-yoga/handler": "0.2.0-alpha.1"
   },
