--- a/benchmark/hello-world/package.json
+++ b/benchmark/hello-world/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production NODE_NO_WARNINGS=1 node cases/$CASE.js",
     "check-case": "cross-env NODE_ENV=production NODE_NO_WARNINGS=1 node check-case.js",
-    "loadtest": "k6 --out json=reports/$CASE.json run k6.js"
+    "loadtest": "k6 --out json=reports/$CASE.json run k6.js",
+    "stop": "node stop-server.js"
   },
   "dependencies": {
     "@envelop/graphql-jit": "1.3.1",
