--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -83,4 +83,5 @@ jobs:
         working-directory: ./benchmark/hello-world
         run: yarn stop
       - name: Compare
+        working-directory: ./benchmark/hello-world
         run: node benchmark/compare apollo:apollo.json express-graphql:express-graphql.json yoga-with-fastify:yoga-with-fastify.json yoga:yoga.json
