--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -65,6 +65,8 @@ jobs:
           yarn wait-on tcp:4000 &
           k6 -e GITHUB_PR=${{ github.event.number }} -e GITHUB_SHA=${{ github.sha }} -e GITHUB_TOKEN=${{secrets.GH_API_TOKEN}} --out json=reports/yoga.json run k6.js
 
+        env:
+          CASE: yoga
       - name: Compare
         working-directory: ./benchmark/hello-world
         run: node compare.js apollo:apollo.json express-graphql:express-graphql.json yoga:yoga.json
