feat: NEW: sveltekit-example

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "examples/fastify",
     "examples/graphql-config",
     "examples/nextjs",
+    "examples/sveltekit",
     "examples/subscriptions",
     "examples/defer-stream",
     "website"
