--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -58,10 +58,6 @@ jobs:
       - name: Stop Express GraphQL
         working-directory: ./benchmark/hello-world
         run: yarn stop
-      - name: Sleep for 5 seconds
-        uses: jakejarvis/wait-action@master
-        with:
-          time: '5s'
       - name: Mercurius
         working-directory: ./benchmark/hello-world
         run: |
@@ -74,15 +70,12 @@ jobs:
       - name: Stop Mercurius
         working-directory: ./benchmark/hello-world
         run: yarn stop
-      - name: Sleep for 5 seconds
-        uses: jakejarvis/wait-action@master
-        with:
-          time: '5s'
       - name: Yoga
         working-directory: ./benchmark/hello-world
         run: |
           yarn start &
           yarn wait-on tcp:4000 &
+          delay 1 &
           k6 -e GITHUB_PR=${{ github.event.number }} -e GITHUB_SHA=${{ github.sha }} -e GITHUB_TOKEN=${{secrets.GITHUB_TOKEN}} --out json=reports/yoga.json run k6.js
 
         env:
