--- a/benchmark/hello-world/package.json
+++ b/benchmark/hello-world/package.json
@@ -3,21 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=production NODE_NO_WARNINGS=1 node cases/$CASE.js",
-    "check-case": "cross-env NODE_ENV=production NODE_NO_WARNINGS=1 node check-case.js",
-    "loadtest": "k6 --out json=reports/$CASE.json run k6.js",
-    "stop": "node stop-server.js"
+    "start": "node start-server.js",
+    "loadtest": "k6 run k6.js"
   },
   "dependencies": {
-    "@envelop/graphql-jit": "1.3.1",
-    "@graphql-tools/schema": "8.3.1",
-    "apollo-server": "3.5.0",
-    "cross-env": "7.0.3",
-    "express-graphql": "0.12.0",
-    "fastify": "3.25.0",
     "graphql": "16.1.0",
     "graphql-yoga": "2.0.0-alpha.3",
-    "mercurius": "9.0.0",
     "wait-on": "6.0.0"
   }
 }
