--- a/examples/sveltekit/package.json
+++ b/examples/sveltekit/package.json
@@ -13,7 +13,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@graphql-yoga/core": "0.3.0-canary-352ac0f.0",
+		"@graphql-yoga/core": "0.2.0-alpha.2",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
