--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -47,7 +47,7 @@
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/core": "0.2.0-alpha.2",
     "@graphql-yoga/handler": "0.2.0-alpha.1",
-    "@repeaterjs/repeater": "^3.0.4",
+    "@graphql-yoga/subscription": "0.0.0",
     "light-my-request": "^4.7.0",
     "pino": "^7.2.0",
     "pino-pretty": "^7.2.0"
