add sveltekit back to workspace

--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
   },
   "workspaces": [
     "packages/*",
-    "examples/hello-world",
+    "examples/defer-stream",
     "examples/express",
     "examples/fastify",
     "examples/graphql-config",
+    "examples/hello-world",
     "examples/nextjs",
     "examples/subscriptions",
-    "examples/defer-stream",
+    "examples/sveltekit",
     "benchmark/*",
     "website"
   ],
