enhance: move W3C changes

--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -42,8 +42,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@ardatan/graphql-helix": "0.1.12",
     "@envelop/core": "^1.6.2",
+    "@graphql-tools/utils": "^8.6.0",
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/core": "0.2.0-alpha.5",
     "@graphql-yoga/handler": "0.2.0-alpha.2",
