--- a/packages/handler/package.json
+++ b/packages/handler/package.json
@@ -43,7 +43,9 @@
   },
   "dependencies": {
     "@ardatan/graphql-helix": "0.1.12",
-    "cross-undici-fetch": "0.1.12"
+    "@graphql-tools/utils": "8.6.0",
+    "cross-undici-fetch": "0.1.12",
+    "dset": "3.1.1"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
