--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -48,6 +48,7 @@
     "@graphql-yoga/core": "0.2.0-alpha.5",
     "@graphql-yoga/handler": "0.2.0-alpha.2",
     "@graphql-yoga/subscription": "0.1.0-alpha.0",
+    "cross-undici-fetch": "^0.1.12",
     "light-my-request": "^4.7.0",
     "pino": "^7.2.0",
     "pino-pretty": "^7.2.0"
