--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Use Node
         uses: actions/setup-node@v2
         with:
-          node-version: '16.x'
+          node-version: 17
 
       - name: Get yarn cache
         uses: c-hive/gha-yarn-cache@v2
