enhance: move W3C changes (#776)
* enhance: move W3C changes

* Avoid helix import

* Go

* More improvements

* Go

* Go

* Use Node 17

* Change threshold

--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -42,12 +42,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@ardatan/graphql-helix": "0.1.12",
     "@envelop/core": "^1.6.2",
+    "@graphql-tools/utils": "^8.6.0",
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/core": "0.2.0-alpha.5",
     "@graphql-yoga/handler": "0.2.0-alpha.2",
     "@graphql-yoga/subscription": "0.1.0-alpha.0",
+    "cross-undici-fetch": "^0.1.13",
     "light-my-request": "^4.7.0",
     "pino": "^7.2.0",
     "pino-pretty": "^7.2.0"
