--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "workspaces": [
     "packages/*",
     "examples/defer-stream",
+    "examples/error-masking",
     "examples/express",
     "examples/fastify",
     "examples/graphql-config",
