fix(fastify-example): add missing node typings and workaround for Readable.from

--- a/examples/fastify/package.json
+++ b/examples/fastify/package.json
@@ -6,6 +6,7 @@
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
+    "@types/node": "17.0.8",
     "fastify": "3.24.1",
     "graphql-yoga": "2.0.0-alpha.7",
     "ts-node": "10.4.0",
