--- a/examples/fastify/package.json
+++ b/examples/fastify/package.json
@@ -6,10 +6,12 @@
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
-    "@types/node": "17.0.8",
     "fastify": "3.24.1",
     "graphql-yoga": "2.0.0-alpha.7",
     "ts-node": "10.4.0",
     "typescript": "4.5.2"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.7"
   }
 }
