add fastify-modules example

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "examples/error-masking",
     "examples/express",
     "examples/fastify",
+    "examples/fastify-modules",
     "examples/graphql-config",
     "examples/hello-world",
     "examples/nextjs",
@@ -52,6 +53,7 @@
   "packageManager": "yarn@3.1.1",
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-decorators": "^7.16.7",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@changesets/cli": "2.17.0",
