--- a/examples/fastify-modules/package.json
+++ b/examples/fastify-modules/package.json
@@ -14,5 +14,8 @@
     "reflect-metadata": "0.1.13",
     "ts-node": "10.4.0",
     "typescript": "4.5.2"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.7"
   }
 }
