--- a/.prettierignore
+++ b/.prettierignore
@@ -21,6 +21,7 @@ examples/prisma-js
 examples/sveltekit
 examples/apollo-engine
 # examples/fastify
+# examples/fastify-modules
 examples/hello-world
 examples/middleware
 examples/prisma-ts
