--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,16 @@
   },
   "prettier.prettierPath": ".yarn/sdks/prettier/index.js",
   "typescript.tsdk": ".yarn/sdks/typescript/lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "files.exclude": {
+    "**/.git": true,
+    "**/.DS_Store": true,
+    "**/node_modules": true,
+    "**/dist": true,
+    "test-lib": true,
+    "lib": true,
+    "coverage": true,
+    "npm": true,
+    ".bob": true
+  }
 }
