--- a/.prettierignore
+++ b/.prettierignore
@@ -4,7 +4,34 @@ yarn.lock
 !.yarn/patches
 !.yarn/sdks
 !.yarn/versions
-# TODO: enable once we get the new version working
-examples/
 **/dist/**
 coverage/
+
+# TODO: enable once we get the new version working
+examples/apollo-engine
+examples/error-handling
+examples/fullstack-vue
+examples/lambda-netlify
+examples/nextj
+examples/subscriptions
+examples/express
+examples/graphql-config
+examples/lambda-typescript
+examples/prisma-js
+examples/sveltekit
+examples/apollo-engine
+# examples/fastify
+examples/hello-world
+examples/middleware
+examples/prisma-ts
+examples/typescript-prisma-client
+examples/authentication
+examples/file-upload
+examples/interface-union
+examples/modular-resolvers
+examples/query-complexity
+examples/defer-stream
+examples/fullstack
+examples/lambda
+examples/mongodb
+examples/schema-directives
