--- a/examples/fastify/tsconfig.json
+++ b/examples/fastify/tsconfig.json
@@ -4,8 +4,7 @@
     "moduleResolution": "node",
     "module": "commonjs",
     "sourceMap": true,
-    "lib": [
-      "esnext"
-    ]
+    "lib": ["esnext"],
+    "allowSyntheticDefaultImports": true
   }
 }
