--- a/examples/fastify/tsconfig.json
+++ b/examples/fastify/tsconfig.json
@@ -4,7 +4,7 @@
     "moduleResolution": "node",
     "module": "commonjs",
     "sourceMap": true,
-    "lib": ["esnext"],
+    "lib": ["esnext", "DOM", "DOM.Iterable"],
     "allowSyntheticDefaultImports": true
   }
 }
