--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "examples/error-masking",
     "examples/express",
     "examples/fastify",
+    "examples/fastify-modules",
     "examples/graphql-config",
     "examples/hello-world",
     "examples/nextjs",
@@ -51,15 +52,19 @@
   "homepage": "https://github.com/dotansimha/graphql-yoga#readme",
   "packageManager": "yarn@3.1.1",
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
+    "@babel/core": "7.16.7",
+    "@babel/plugin-proposal-class-properties": "7.16.7",
+    "@babel/plugin-proposal-decorators": "7.16.7",
+    "@babel/preset-env": "7.16.8",
+    "@babel/preset-typescript": "7.16.7",
     "@changesets/cli": "2.17.0",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/jest": "^27.0.2",
     "@types/supertest": "^2.0.11",
     "babel-jest": "^27.3.1",
+    "babel-plugin-parameter-decorator": "1.0.16",
+    "babel-plugin-transform-typescript-metadata": "0.3.2",
     "bob-the-bundler": "^1.5.1",
     "graphql": "^16.1.0",
     "husky": "^7.0.4",
