schema option and default schema

--- a/.prettierignore
+++ b/.prettierignore
@@ -14,7 +14,7 @@ examples/fullstack-vue
 examples/lambda-netlify
 examples/nextj
 examples/subscriptions
-examples/express
+# examples/express
 examples/graphql-config
 examples/lambda-typescript
 examples/prisma-js
