--- a/.prettierignore
+++ b/.prettierignore
@@ -9,7 +9,7 @@ coverage/
 
 # TODO: enable once we get the new version working
 examples/apollo-engine
-examples/error-handling
+# examples/error-handling
 examples/fullstack-vue
 examples/lambda-netlify
 examples/nextj
