Apollo Federation Example

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,8 @@
   "files.exclude": {
     "**/.git": true,
     "**/.DS_Store": true,
-    "**/node_modules": true,
-    "**/dist": true,
+    "**/node_modules": false,
+    "**/dist": false,
     "test-lib": true,
     "lib": true,
     "coverage": true,
