--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "workspaces": [
     "packages/*",
+    "examples/apollo-federation",
     "examples/defer-stream",
     "examples/error-masking",
     "examples/express",
