--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
       "@graphql-yoga/handler": ["packages/handler/src/index.ts"],
       "@graphql-yoga/core": ["packages/core/src/index.ts"],
       "@graphql-yoga/subscription": ["packages/subscription/src/index.ts"],
+      "@graphql-yoga/node": ["packages/node/src/index.ts"],
       "graphql-yoga": ["packages/graphql-yoga/src/index.ts"],
       "@graphql-yoga/cli": ["packages/cli/src/index.ts"]
     }
