--- a/examples/error-handling/package.json
+++ b/examples/error-handling/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "cross-undici-fetch": "^0.1.15",
     "graphql": "^16.1.0",
-    "graphql-yoga": "2.0.0-alpha.7",
+    "@graphql-yoga/node": "0.0.0",
     "ts-node": "10.4.0",
     "typescript": "^4.4.4"
   }
