--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@graphql-yoga/node": "0.0.0",
     "graphql": "^16.1.0",
-    "graphql-yoga": "2.0.0-alpha.7",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
