--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,10 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "paths": {
-      "@graphql-yoga/handler": ["packages/handler/src/index.ts"],
       "@graphql-yoga/core": ["packages/core/src/index.ts"],
       "@graphql-yoga/subscription": ["packages/subscription/src/index.ts"],
-      "graphql-yoga": ["packages/graphql-yoga/src/index.ts"],
-      "@graphql-yoga/cli": ["packages/cli/src/index.ts"]
+      "@graphql-yoga/node": ["packages/node/src/index.ts"],
+      "graphql-yoga": ["packages/graphql-yoga/src/index.ts"]
     }
   },
   "include": ["packages"],
