--- a/benchmark/hello-world/package.json
+++ b/benchmark/hello-world/package.json
@@ -7,8 +7,8 @@
     "loadtest": "k6 run k6.js"
   },
   "dependencies": {
+    "@graphql-yoga/node": "0.0.0",
     "graphql": "16.2.0",
-    "graphql-yoga": "2.0.0-alpha.7",
     "wait-on": "6.0.0"
   }
 }
