--- a/examples/defer-stream/package.json
+++ b/examples/defer-stream/package.json
@@ -6,8 +6,8 @@
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
+    "@graphql-yoga/node": "0.0.0",
     "graphql": "16.0.0-experimental-stream-defer.5",
-    "graphql-yoga": "2.0.0-alpha.7",
     "ts-node": "10.4.0",
     "typescript": "^4.4.4"
   }
