--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -6,9 +6,9 @@
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
+    "@graphql-yoga/node": "0.0.0",
     "@types/express": "^4.17.13",
     "express": "^4.17.1",
-    "graphql-yoga": "2.0.0-alpha.7",
     "supertest": "^6.1.6",
     "ts-node": "10.4.0",
     "typescript": "4.5.2"
