--- a/examples/fastify-modules/package.json
+++ b/examples/fastify-modules/package.json
@@ -8,9 +8,9 @@
   "dependencies": {
     "@envelop/graphql-modules": "2.0.0",
     "@graphql-tools/load-files": "6.5.3",
+    "@graphql-yoga/node": "0.0.0",
     "fastify": "3.24.1",
     "graphql-modules": "2.0.0",
-    "graphql-yoga": "2.0.0-alpha.7",
     "reflect-metadata": "0.1.13",
     "ts-node": "10.4.0",
     "typescript": "4.5.2"
