--- a/examples/fastify/package.json
+++ b/examples/fastify/package.json
@@ -6,8 +6,8 @@
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
+    "@graphql-yoga/node": "0.0.0",
     "fastify": "3.24.1",
-    "graphql-yoga": "2.0.0-alpha.7",
     "ts-node": "10.4.0",
     "typescript": "4.5.2"
   },
