--- a/examples/graphql-config/package.json
+++ b/examples/graphql-config/package.json
@@ -11,8 +11,8 @@
         "@graphql-codegen/typescript": "^2.4.1",
         "@graphql-codegen/typescript-resolvers": "^2.4.2",
         "@graphql-tools/schema": "^8.3.1",
-        "@graphql-yoga/cli": "0.0.1-alpha.4",
         "graphql": "^16.1.0",
+        "graphql-yoga": "2.0.0-alpha.7",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.4"
     }
