--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -6,7 +6,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "graphql": "16.1.0",
-    "graphql-yoga": "2.0.0-alpha.7"
+    "@graphql-yoga/node": "0.0.0",
+    "graphql": "16.1.0"
   }
 }
