--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -42,9 +42,11 @@
     "access": "public"
   },
   "dependencies": {
+    "@envelop/core": "^1.6.2",
     "@graphql-tools/utils": "^8.6.0",
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/core": "0.2.0-alpha.6",
+    "@graphql-yoga/subscription": "0.1.0-alpha.0",
     "cross-undici-fetch": "^0.1.15",
     "light-my-request": "^4.7.0",
     "pino": "^7.2.0",
