Less verbose output and common package

--- a/examples/sveltekit/package.json
+++ b/examples/sveltekit/package.json
@@ -29,7 +29,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@graphql-yoga/core": "^0.2.0-alpha.5",
+    "@graphql-yoga/common": "^0.2.0-alpha.5",
     "graphql": "^16.2.0"
   },
   "type": "module"
