--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@graphql-yoga/core",
+  "name": "@graphql-yoga/common",
   "version": "0.2.0-alpha.6",
   "description": "",
   "repository": {
     "type": "git",
     "url": "https://github.com/dotansimha/graphql-yoga.git",
-    "directory": "packages/core"
+    "directory": "packages/common"
   },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
