--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "paths": {
-      "@graphql-yoga/core": ["packages/core/src/index.ts"],
+      "@graphql-yoga/common": ["packages/common/src/index.ts"],
       "@graphql-yoga/subscription": ["packages/subscription/src/index.ts"],
       "@graphql-yoga/node": ["packages/node/src/index.ts"],
       "graphql-yoga": ["packages/graphql-yoga/src/index.ts"]
