fix(common): bump cross-undici-fetch to fix missing mimetype issue in uploaded files

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "examples/error-masking",
     "examples/express",
     "examples/fastify",
+    "examples/fastify-file-upload",
     "examples/fastify-modules",
     "examples/graphql-config",
     "examples/hello-world",
