basic fastify upload test

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -59,6 +59,7 @@
     "@ungap/event-target": "^0.2.3",
     "bob-the-bundler": "^1.5.1",
     "eventsource": "^1.1.0",
+    "fastify": "^3.26.0",
     "graphql": "^16.0.1"
   },
   "peerDependencies": {
