:sparkles: UPDATE: sveltekit next.234 & Yoga alpha6 (example and doc)

--- a/.prettierignore
+++ b/.prettierignore
@@ -18,7 +18,7 @@ examples/subscriptions
 examples/graphql-config
 examples/lambda-typescript
 examples/prisma-js
-examples/sveltekit
+# examples/sveltekit
 examples/apollo-engine
 # examples/fastify
 # examples/fastify-modules
