--- a/examples/apollo-federation/service/package.json
+++ b/examples/apollo-federation/service/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@apollo/subgraph": "^0.1.5",
-    "@graphql-yoga/node": "0.0.0",
+    "@graphql-yoga/node": "0.1.0-alpha.0",
     "graphql": "^16.2.0"
   }
 }
