--- a/examples/apollo-federation/gateway/package.json
+++ b/examples/apollo-federation/gateway/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@apollo/gateway": "^0.45.1",
     "@envelop/apollo-federation": "^1.0.0",
-    "@graphql-yoga/node": "0.0.0",
+    "@graphql-yoga/node": "0.1.0-alpha.0",
     "graphql": "^15.5.3"
   }
 }
