:art: UPDATE: Format

--- a/examples/express/tsconfig.json
+++ b/examples/express/tsconfig.json
@@ -6,8 +6,6 @@
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "lib": [
-      "esnext"
-    ]
+    "lib": ["esnext"]
   }
 }
