--- a/examples/error-handling/tsconfig.json
+++ b/examples/error-handling/tsconfig.json
@@ -4,8 +4,6 @@
     "moduleResolution": "node",
     "module": "commonjs",
     "sourceMap": true,
-    "lib": [
-      "esnext"
-    ]
+    "lib": ["esnext"]
   }
 }
