--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "benchmark/*",
     "website"
   ],
+  "engines": {
+    "pnpm": ">=6.27.1"
+  },
   "homepage": "https://github.com/dotansimha/graphql-yoga#readme",
-  "packageManager": "yarn@3.1.1",
   "devDependencies": {
     "@babel/core": "7.16.12",
     "@babel/plugin-proposal-class-properties": "7.16.7",
