--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,18 +16,16 @@ jobs:
           fetch-depth: 0
 
       - name: Use Node ${{ matrix.node-version }}
-        uses: actions/setup-node@master
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Get yarn cache
-        uses: c-hive/gha-yarn-cache@v2
+          cache: 'pnpm'
 
       - name: Install Dependencies using Yarn
-        run: yarn
+        run: pnpm install
 
       - name: Build Packages
-        run: yarn build
+        run: pnpm build
 
       - name: Run Tests
-        run: yarn test
+        run: pnpm test
