--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -12,8 +12,13 @@ jobs:
           # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
           fetch-depth: 0
 
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6.27.1
+
       - name: Use Node
-        uses: actions/setup-node@pnpm
+        uses: actions/setup-node@v2
         with:
           node-version: 16
           cache: 'pnpm'
