--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -13,6 +13,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6.27.1
+
       - name: Use Node
         uses: actions/setup-node@v2
         with:
