Add missing tslib dependency

--- a/packages/subscription/package.json
+++ b/packages/subscription/package.json
@@ -42,7 +42,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@repeaterjs/repeater": "^3.0.4"
+    "@repeaterjs/repeater": "^3.0.4",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "bob-the-bundler": "^1.5.1"
