--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -51,7 +51,8 @@
     "@graphql-yoga/subscription": "0.1.0-alpha.1",
     "cross-undici-fetch": "^0.1.19",
     "dset": "^3.1.1",
-    "graphql-helix": "1.11.0"
+    "graphql-helix": "1.11.0",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
