--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -55,6 +55,7 @@
     "@graphql-tools/code-file-loader": "^7.2.3",
     "@graphql-yoga/node": "0.1.0-alpha.3",
     "graphql-config": "^4.1.0",
+    "tslib": "^2.3.1",
     "yargs": "^17.3.0"
   },
   "devDependencies": {
