--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -50,7 +50,8 @@
     "cross-undici-fetch": "^0.1.19",
     "light-my-request": "^4.7.0",
     "pino": "^7.2.0",
-    "pino-pretty": "^7.2.0"
+    "pino-pretty": "^7.2.0",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@types/eventsource": "^1",
