--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
       "@graphql-yoga/subscription": ["packages/subscription/src/index.ts"],
       "@graphql-yoga/node": ["packages/node/src/index.ts"],
       "graphql-yoga": ["packages/graphql-yoga/src/index.ts"]
-    }
+    },
+    "jsx": "preserve"
   },
   "include": ["packages"],
   "exclude": ["**/dist", "**/temp"]
