--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@graphql-yoga/node": "0.1.0-alpha.3",
+    "@types/react": "17.0.38",
     "graphql": "^16.1.0",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "typescript": "4.5.5"
   }
 }
