--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -48,10 +48,10 @@
     "@envelop/validation-cache": "^4.0.0",
     "@graphql-tools/schema": "^8.3.1",
     "@graphql-tools/utils": "^8.6.0",
+    "@graphql-yoga/render-graphiql": "0.0.0",
     "@graphql-yoga/subscription": "0.1.0-alpha.1",
     "cross-undici-fetch": "^0.1.19",
     "dset": "^3.1.1",
-    "graphql-helix": "1.11.0",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
