--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -60,7 +60,8 @@
     "@ungap/event-target": "^0.2.3",
     "bob-the-bundler": "^1.5.1",
     "eventsource": "^1.1.0",
-    "graphql": "^16.0.1"
+    "graphql": "^16.0.1",
+    "puppeteer": "12.0.1"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
