chore: bump envelop packages in bulk

--- a/renovate.json
+++ b/renovate.json
@@ -6,5 +6,11 @@
   "major": {
     "automerge": false
   },
-  "labels": ["dependencies"]
+  "labels": ["dependencies"],
+  "packageRules": [
+    {
+      "groupName": "envelop",
+      "matchPackagePrefixes": "@envelop"
+    }
+  ]
 }
