fix Node.js 17 build by bumping cross-undici-fetch

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   "resolutions": {
     "@changesets/apply-release-plan": "5.0.1",
     "graphql": "16.3.0",
-    "graphiql@1.5.16": "patch:graphiql@npm:1.5.16#.yarn/patches/graphiql-npm-1.5.16-6af0eb47ef"
+    "graphiql@1.5.16": "patch:graphiql@npm:1.5.16#.yarn/patches/graphiql-npm-1.5.16-6af0eb47ef",
+    "cross-undici-fetch": "0.1.23"
   }
 }
