--- a/packages/graphiql/package.json
+++ b/packages/graphiql/package.json
@@ -38,6 +38,7 @@
     "@graphql-tools/url-loader": "^7.7.1",
     "copy-to-clipboard": "^3.3.1",
     "graphiql": "1.5.16",
+    "graphiql-explorer": "^0.6.3",
     "graphql": "16.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
