--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -47,7 +47,7 @@
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/common": "0.2.0-alpha.10",
     "@graphql-yoga/subscription": "0.1.0-alpha.1",
-    "cross-undici-fetch": "^0.1.19",
+    "cross-undici-fetch": "^0.1.23",
     "light-my-request": "^4.7.0",
     "pino": "^7.2.0",
     "pino-pretty": "^7.2.0",
@@ -60,7 +60,8 @@
     "@ungap/event-target": "^0.2.3",
     "bob-the-bundler": "^1.5.1",
     "eventsource": "^1.1.0",
-    "graphql": "^16.0.1"
+    "graphql": "^16.0.1",
+    "puppeteer": "12.0.1"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
