--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "format": "prettier . --write",
     "pretty-quick": "pretty-quick --staged",
     "prebuild": "rimraf packages/*/dist",
-    "build": "tsc --project tsconfig.build.json && bob build",
+    "build": "yarn workspace @graphql-yoga/graphiql run build && yarn workspace @graphql-yoga/render-graphiql run build && tsc --project tsconfig.build.json && bob build",
     "test": "jest --passWithNoTests",
     "release": "yarn build && changeset publish",
     "release:canary": "(node scripts/canary-release.js && yarn build && yarn changeset publish --tag canary) || echo Skipping Canary...",
@@ -78,6 +78,7 @@
   },
   "resolutions": {
     "@changesets/apply-release-plan": "5.0.1",
-    "graphql": "16.3.0"
+    "graphql": "16.3.0",
+    "cross-undici-fetch": "0.1.23"
   }
 }
