examples part of workspace

--- a/package.json
+++ b/package.json
@@ -35,17 +35,7 @@
   },
   "workspaces": [
     "packages/*",
-    "examples/apollo-federation",
-    "examples/defer-stream",
-    "examples/error-masking",
-    "examples/express",
-    "examples/fastify",
-    "examples/fastify-modules",
-    "examples/graphql-config",
-    "examples/hello-world",
-    "examples/nextjs",
-    "examples/subscriptions",
-    "examples/sveltekit",
+    "examples/*",
     "benchmark/*",
     "website"
   ],
